Fix link CSS color and spacing

--- a/colorgame.css
+++ b/colorgame.css
@@ -123,3 +123,6 @@ button:hover {
     padding: 10px 10px;
     text-align: center;
 }
+#header a {
+    color: steelblue;
+}
